# candle-aggregator

./: .gitignore  README.md  cline_converter.py  mypy.ini  pyproject.toml  test_clines.py  time-decorator.py  utils.py
app/: candles_aggregator.py  test_agg_volume_candles.py  test_candles_aggregator.py  test_combine_candles.py  test_split_candle.py  test_volume_candles.py
